# bitman

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: bit.rs  bits.rs  lib.rs
src/bit/: bit_tests.rs
src/bits/: bits_tests.rs
