[package]
    authors       = ["Eric Evans (CireSnave@gmail.com)"]
    categories    = ["data-structures", "encoding", "no-std", "parsing"]
    description   = "An easy to use bit manipulation library for Rust"
    documentation = "https://github.com/ciresnave/bitman"
    edition       = "2021"
    homepage      = "https://github.com/ciresnave/bitman"
    keywords      = ["bitfield", "bit", "bits", "byte", "binary"]
    license       = "MIT"
    name          = "bitman"
    readme        = "README.md"
    repository    = "https://github.com/ciresnave/bitman"
    rust-version  = "1.61"
    version       = "2.0.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
    codegen-units = 1
    lto           = "fat"


[dependencies]
    libc-print = "0.1.19"
    num-traits = "0.2.15"

[dev-dependencies]
    criterion  = "0.5.1"
    flamegraph = "0.6.1"
    proptest   = "1.0.0"
